[tool.poetry]
name = "pepper-cli"
version = "0.1.0"
description = "Get information about any PEP (Python Enhancement Proposal)"
authors = ["Noah Tanner <50159154+kevinshome@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pywebview = { version = "*", optional = true }

[tool.poetry.group.webview]
optional = true

[tool.poetry.group.webview.dependencies]
pywebview = "*"

[tool.poetry.scripts]
pepper = "pepper_cli:main"

[tool.poetry.extras]
webview = ["pywebview"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
